<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:textSize="21sp"
            android:text="@string/delete_this_book"
            app:layout_constraintBottom_toTopOf="@id/delete_confirm_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete_confirm_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/delete_confirm_btn_bg"
            android:padding="8dp"
            android:text="@string/sure_delete"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/delete_cancel_btn"
            app:layout_constraintEnd_toStartOf="@+id/delete_cancel_btn"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/txt_title"
            app:layout_constraintTop_toTopOf="@+id/delete_cancel_btn"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintWidth_percent="0.4"

            />

        <ProgressBar
            android:id="@+id/pb_confirm_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="@id/delete_confirm_btn"
            app:layout_constraintStart_toStartOf="@id/delete_confirm_btn"
            app:layout_constraintEnd_toEndOf="@id/delete_confirm_btn"
            app:layout_constraintBottom_toBottomOf="@id/delete_confirm_btn"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete_cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/cencel_delete_bg_btn"
            android:text="@string/no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txt_title"
            app:layout_constraintStart_toEndOf="@+id/delete_confirm_btn"
            app:layout_constraintTop_toBottomOf="@+id/txt_title"
            app:layout_constraintWidth_percent="0.25" />
    </androidx.constraintlayout.widget.ConstraintLayout>
